data/derived/comb/progs/unify/prog5587.ml.out
Characters 52-62:
  if n < 0 then [] else []::[(n mod 10)];;
                             ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
